Fix 'about description-3' visible

--- a/assets/sass/_responsive.sass
+++ b/assets/sass/_responsive.sass
@@ -278,6 +278,8 @@
     &__title
       font-size: 24px
     &__description
+      & .about__description-3
+        display: block
       &-left
         display: none
       &-1
@@ -410,6 +412,8 @@
     &__title
       font-size: 24px
     &__description
+      & .about__description-3
+        display: block
       &-left
         display: none
       &-1
